--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@
     font-size: 65px;
     
 } */
+.huge {
+    font-size: 10rem;
+    font-weight: 900;
+ }
+
+.small {
+    font-size: 3rem;
+    font-weight: 500;
+ }
